--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "resume",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://sumitsgram.github.io/Resume-Builder",
   "dependencies": {
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
@@ -27,9 +26,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "predeploy":"npm run build",
-    "deploy":"gh-pages -d build"
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": [
